--- a/data/speakers/Speaker02.toml
+++ b/data/speakers/Speaker02.toml
@@ -1,7 +1,10 @@
 img = "faceholder.png"
-name = "Speaker Name 02"
-organisation = "Company 2"
-role = "Role 1"
+name = "Em breve"
+organisation = ""
+role = ""
 social = [
         ["fa-twitter", "#"],
+        ["fa-github", "#"],
+        ["fa-linkedin", "#"],
+        ["fa-globe", "#"]
       ]
