--- a/data/projects/Talk04.yaml
+++ b/data/projects/Talk04.yaml
@@ -1,9 +1,9 @@
 modalID: 2
-title: "Lightning Talks - Palestras curtas de 5 minutos"
-subtitle: "Palestras curtas de 5 minutos"
+title: "Seção Oral 1 - Palestras de 15 minutos"
+subtitle: ""
 date: 2019-11-30
-startsAt: 09:30
-endsAt: 10:30
+startsAt: 11:00
+endsAt: 12:00
 img: roundicons.png
 preview: faceholder.png
 client: 
