--- a/data/projects/Talk05.yaml
+++ b/data/projects/Talk05.yaml
@@ -1,9 +1,9 @@
 modalID: 2
-title: "Lightning Talks - Palestras curtas de 5 minutos"
-subtitle: "Palestras curtas de 5 minutos"
+title: "Horário de almoço"
+subtitle: ""
 date: 2019-11-30
-startsAt: 09:30
-endsAt: 10:30
+startsAt: 12:00
+endsAt: 13:30
 img: roundicons.png
 preview: faceholder.png
 client: 
