--- a/data/projects/Talk08.yaml
+++ b/data/projects/Talk08.yaml
@@ -1,9 +1,9 @@
 modalID: 2
-title: "Lightning Talks - Palestras curtas de 5 minutos"
-subtitle: "Palestras curtas de 5 minutos"
+title: "Coffe Break"
+subtitle: ""
 date: 2019-11-30
-startsAt: 09:30
-endsAt: 10:30
+startsAt: 15:30
+endsAt: 16:00
 img: roundicons.png
 preview: faceholder.png
 client: 
