--- a/data/projects/Talk06.yaml
+++ b/data/projects/Talk06.yaml
@@ -1,5 +1,5 @@
 modalID: 2
-title: "Seção Oral 2 - Palestras de 15 minutos"
+title: "Sessão Oral 2 - Palestras de 15 minutos"
 subtitle: ""
 date: 2019-11-30
 startsAt: 13:30
